--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -14,14 +14,19 @@ server {
 
     root /usr/share/nginx/html;
 
+    add_header         Access-Control-Allow-Origin "*" always;
+    add_header         Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
+    add_header         Access-Control-Allow-Headers "authorization,DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range" always;
+
     location ~ ^/(login|register2|account)/ {
         proxy_set_header   X-Forwarded-For $remote_addr;
         proxy_set_header   Host $http_host;
-        proxy_pass         http://127.0.0.1:12345;
+        proxy_pass         http://server:12345;
+
     }
 
     location /ws/{
-        proxy_pass           http://127.0.0.1:12345;
+        proxy_pass           http://server:12345;
         proxy_http_version   1.1;
         proxy_set_header     Upgrade $http_upgrade;
         proxy_set_header     Connection "upgrade";
