--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ services:
     tty: true
     stdin_open: true 
     build:
-      context: ./server/
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: Dockerfile.server
     ports:
       - '12345:12345'
     depends_on:
@@ -34,8 +34,10 @@ services:
     tty: true
     stdin_open: true 
     build:
-      context: ./client/
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: Dockerfile.client
+    depends_on:
+      - 'server'
     ports:
       - '8080:80'
     networks:
